# src/routes/users.router.js
@@ -1,0 +1,8 @@
+const { Router } = require('express')
+const UserController = require('../controllers/user.controller')
+
+const router = new Router();
+
+router.get('/user/:userId', UserController.getUser)
+
+module.exports = router;
